# docForge

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
api/: __init__.py  action_guard.py  deps.py  errors.py  main.py  run_id_guard.py  schemas.py  state_mapper.py
api/routers/: __init__.py  artifacts.py  diagnostics.py  model_config.py  runs.py  sources.py  workspace.py
api/services/: __init__.py  artifact_service.py  run_action_service.py  source_upload_service.py  workspace_view_service.py
app/: __init__.py  main.py
docforge_core/: __init__.py
docforge_core/agents/: __init__.py  _shared.py  audit_agent.py  capability_grounding_verifier.py  capability_validation_trace.py  confirmation_decision_validator.py  figure_slot_planner.py  frozen_doc_plan_service.py  human_confirm_gate.py  human_confirm_pipeline_service.py  outline_agent.py  outline_traversal.py  outline_validator.py  product_understanding_agent.py  profile_entity_grounding_verifier.py  reference_style_agent.py  revision_agent.py  revision_loop_service.py  screenshot_binding_agent.py  section_draft_safety_verifier.py  section_draft_validator.py  section_evidence_policy.py  section_plan_validator.py  software_diagnosis_agent.py  template_strategy_agent.py  title_injection_safety.py  title_safety.py  understanding_pipeline_service.py  writer_agent.py  writing_goal_safety.py  writing_plan_safety_items.py  writing_plan_safety_verifier.py
docs/: ARCHITECTURE_DECISIONS.md  CURRENT_STATUS.md  DOCS_SYNC_REPORT.md  LLM_HANDOFF.md  SPRINT_ROADMAP.md  local_e2e_acceptance.md  sample_project_usage.md  test_impact_matrix.md  testing.md  本地试用操作手册.md  测试盘点摘要.md
scripts/: _venv_python.sh  check_frontend_env.sh  dev.sh  import_sample_project.py  test_collect.sh  test_dev.sh  test_durations.sh  test_frontend.sh  test_full.sh  test_integration.sh  test_lf.sh  test_quick.sh  test_smoke.sh
tests/: conftest.py
(+176 files in other folders)
