[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge"
version = "0.1.0"
description = "墨衡 DocForge — 软件著作权文档生成多智能体系统"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.2.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "qdrant-client>=1.9.0,<2.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "pypdf>=4.2.0,<6.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "markdown>=3.6,<4.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "pillow>=10.3.0,<12.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "tenacity>=8.3.0,<10.0.0",
    "orjson>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --strict-markers"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: fast isolated unit tests",
    "contract: API/schema/status contract tests",
    "smoke: minimal core workflow sanity tests",
    "integration: multi-module integration tests",
    "slow: slow tests not required in normal dev loop",
    "external: tests requiring network, real API keys, LLM calls, or external services",
    "legacy: tests retained temporarily for deprecated behavior",
]

[tool.hatch.build.targets.wheel]
packages = ["docforge_core", "api"]
